@@ -1,4 +1,14 @@
 ===============================================================
+Tag name:  rtm1_0_10
+Originator(s): muszala
+Date: Nov 13, 2012
+One-line Summary: Rewrite RtmFloodInit to read SLOPE and MAX_VOLR
+  from file and change to newer rdirc file
+
+M       models/ro/rtm/src/riverroute/RtmMod.F90
+M       models/rof/rtm/src/bld/namelist_files/namelist_defaults_rtm.xml
+
+===============================================================
 Tag name:  rtm1_0_09
 Originator(s): mvertens
 Date: Sep 24, 2012
